--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 
         <!-- Filter items -->
         <ul class="list-block list">
-          <li class="item-site"
+          <li class="item-site link"
             ><a class="filter-link" href=""
               ><img
                 class="filter-img"
@@ -73,7 +73,7 @@
               <p class="filter-text">App</p></a
             ></li
           >
-          <li class="item-site"
+          <li class="item-site link"
             ><a class="filter-link" href=""
               ><img
                 class="filter-img"
@@ -86,7 +86,7 @@
               <p class="filter-text">Marketing</p></a
             ></li
           >
-          <li class="item-site"
+          <li class="item-site link"
             ><a class="filter-link" href=""
               ><img
                 class="filter-img"
@@ -99,7 +99,7 @@
               <p class="filter-text">App</p></a
             ></li
           >
-          <li class="item-site"
+          <li class="item-site link"
             ><a class="filter-link" href=""
               ><img
                 class="filter-img"
@@ -112,7 +112,7 @@
               <p class="filter-text">Marketing</p></a
             ></li
           >
-          <li class="item-site"
+          <li class="item-site link"
             ><a class="filter-link" href=""
               ><img
                 class="filter-img"
@@ -125,7 +125,7 @@
               <p class="filter-text">Design</p></a
             ></li
           >
-          <li class="item-site"
+          <li class="item-site link"
             ><a class="filter-link" href=""
               ><img
                 class="filter-img"
@@ -138,7 +138,7 @@
               <p class="filter-text">Marketing</p></a
             ></li
           >
-          <li class="item-site"
+          <li class="item-site link"
             ><a class="filter-link" href=""
               ><img
                 class="filter-img"
@@ -151,7 +151,7 @@
               <p class="filter-text">Design</p></a
             ></li
           >
-          <li class="item-site"
+          <li class="item-site link"
             ><a class="filter-link" href=""
               ><img
                 class="filter-img"
@@ -164,7 +164,7 @@
               <p class="filter-text">Web Site</p></a
             ></li
           >
-          <li class="item-site"
+          <li class="item-site link"
             ><a class="filter-link" href=""
               ><img
                 class="filter-img"
