--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,8 @@
 
         <!-- Filter items -->
         <ul class="list-block list">
-          <li class="item-site link"
-            ><a class="filter-link" href=""
+          <li class="item-site"
+            ><a class="filter-link link" href=""
               ><img
                 class="filter-img"
                 src="./images/Filter/img1.jpg"
@@ -73,8 +73,8 @@
               <p class="filter-text">App</p></a
             ></li
           >
-          <li class="item-site link"
-            ><a class="filter-link" href=""
+          <li class="item-site"
+            ><a class="filter-link link" href=""
               ><img
                 class="filter-img"
                 src="./images/Filter/img2.jpg"
@@ -86,8 +86,8 @@
               <p class="filter-text">Marketing</p></a
             ></li
           >
-          <li class="item-site link"
-            ><a class="filter-link" href=""
+          <li class="item-site"
+            ><a class="filter-link link" href=""
               ><img
                 class="filter-img"
                 src="./images/Filter/img3.jpg"
@@ -99,8 +99,8 @@
               <p class="filter-text">App</p></a
             ></li
           >
-          <li class="item-site link"
-            ><a class="filter-link" href=""
+          <li class="item-site"
+            ><a class="filter-link link" href=""
               ><img
                 class="filter-img"
                 src="./images/Filter/img4.jpg"
@@ -112,8 +112,8 @@
               <p class="filter-text">Marketing</p></a
             ></li
           >
-          <li class="item-site link"
-            ><a class="filter-link" href=""
+          <li class="item-site"
+            ><a class="filter-link link" href=""
               ><img
                 class="filter-img"
                 src="./images/Filter/img5.jpg"
@@ -125,8 +125,8 @@
               <p class="filter-text">Design</p></a
             ></li
           >
-          <li class="item-site link"
-            ><a class="filter-link" href=""
+          <li class="item-site"
+            ><a class="filter-link link" href=""
               ><img
                 class="filter-img"
                 src="./images/Filter/img6.jpg"
@@ -138,8 +138,8 @@
               <p class="filter-text">Marketing</p></a
             ></li
           >
-          <li class="item-site link"
-            ><a class="filter-link" href=""
+          <li class="item-site"
+            ><a class="filter-link link" href=""
               ><img
                 class="filter-img"
                 src="./images/Filter/img7.jpg"
@@ -151,8 +151,8 @@
               <p class="filter-text">Design</p></a
             ></li
           >
-          <li class="item-site link"
-            ><a class="filter-link" href=""
+          <li class="item-site"
+            ><a class="filter-link link" href=""
               ><img
                 class="filter-img"
                 src="./images/Filter/img8.jpg"
@@ -164,8 +164,8 @@
               <p class="filter-text">Web Site</p></a
             ></li
           >
-          <li class="item-site link"
-            ><a class="filter-link" href=""
+          <li class="item-site"
+            ><a class="filter-link link" href=""
               ><img
                 class="filter-img"
                 src="./images/Filter/img9.jpg"
