--- a/portfolio.html
+++ b/portfolio.html
@@ -28,20 +28,22 @@
           >Web<span class="header-studio link">Studio</span></a
         >
         <ul class="header-list list">
-          <li class="header-item"><a class="header-link" href="./index.html">Studio</a></li>
-          <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
-          <li class="header-item"><a class="header-link" href="">Contacts</a></li>
+          <li class="header-item"><a class="header-link link" href="./index.html">Studio</a></li>
+          <li class="header-item"
+            ><a class="header-link link" href="./portfolio.html">Portfolio</a></li
+          >
+          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="header-address">
         <ul class="header-contact-list list">
           <li class="header-contact">
-            <a class="header-contact-link" href="mailto:info@devstudio.com"
+            <a class="header-contact-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             ></li
           >
           <li class="header-contact">
-            <a class="header-contact-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="header-contact-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
